; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_init.c_wrMutexInit.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_init.c_wrMutexInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i64 }
%struct.TYPE_3__ = type { i32 (...)* }

@wrapped = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@SQLITE_ERROR = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @wrMutexInit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wrMutexInit() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @wrapped, i32 0, i32 2), align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = load i32, i32* @SQLITE_ERROR, align 4
  store i32 %5, i32* %1, align 4
  br label %9

6:                                                ; preds = %0
  %7 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @wrapped, i32 0, i32 1, i32 0), align 8
  %8 = call i32 (...) %7()
  store i32 %8, i32* %1, align 4
  br label %9

9:                                                ; preds = %6, %4
  %10 = load i32, i32* %1, align 4
  %11 = load i32, i32* @SQLITE_OK, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @wrapped, i32 0, i32 0), align 8
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
